IWS_1st/IWS/API/Litecad.h

HANDLE LCAPI lcBlockAddPoint    (HANDLE hBlock, double X, double Y);
HANDLE LCAPI lcBlockAddPoint2   (HANDLE hBlock, double X, double Y, int PtMode, double PtSize);
HANDLE LCAPI lcBlockAddPoint3d  (HANDLE hBlock, double X, double Y, double Z);
HANDLE LCAPI lcBlockAddPtArray  (HANDLE hBlock, LPCWSTR szFileName, HWND hWnd);
HANDLE LCAPI lcBlockAddXline    (HANDLE hBlock, double X, double Y, double Angle, BOOL bRay);
HANDLE LCAPI lcBlockAddXline2P  (HANDLE hBlock, double X, double Y, double X2, double Y2, BOOL bRay);
HANDLE LCAPI lcBlockAddLine     (HANDLE hBlock, double X1, double Y1, double X2, double Y2);
HANDLE LCAPI lcBlockAddLineDir  (HANDLE hBlock, double X, double Y, double Angle, double Dist);
HANDLE LCAPI lcBlockAddLineTan  (HANDLE hBlock, HANDLE hEnt1, HANDLE hEnt2, int Mode);
HANDLE LCAPI lcBlockAddPolyline (HANDLE hBlock, int FitType, BOOL bClosed, BOOL bFilled);
HANDLE LCAPI lcBlockAddRPolygon (HANDLE hBlock, int nVers, double Xc, double Yc, double R, double Ang0, BOOL bInscribed, BOOL bFilled);
HANDLE LCAPI lcBlockAddSpline   (HANDLE hBlock, BOOL bClosed, BOOL bFilled);
HANDLE LCAPI lcBlockAddMline    (HANDLE hBlock, int FitType, BOOL bClosed);
HANDLE LCAPI lcBlockAddRect     (HANDLE hBlock, double Xc, double Yc, double Width, double Height, double Angle, BOOL bFilled);
HANDLE LCAPI lcBlockAddRect2    (HANDLE hBlock, double Left, double Bottom, double Width, double Height, double Rad, BOOL bFilled);
HANDLE LCAPI lcBlockAddCircle   (HANDLE hBlock, double X, double Y, double Radius, BOOL bFilled);
HANDLE LCAPI lcBlockAddArc      (HANDLE hBlock, double X, double Y, double Radius, double StartAngle, double ArcAngle);
HANDLE LCAPI lcBlockAddArc3P    (HANDLE hBlock, double X1, double Y1, double X2, double Y2, double X3, double Y3);
HANDLE LCAPI lcBlockAddFillet   (HANDLE hBlock, HANDLE hEnt1, HANDLE hEnt2, double Radius);
HANDLE LCAPI lcBlockAddEllipse  (HANDLE hBlock, double X, double Y, double R1, double R2, double RotAngle, double StartAngle, double ArcAngle);
HANDLE LCAPI lcBlockAddText     (HANDLE hBlock, LPCWSTR szText, double X, double Y);
HANDLE LCAPI lcBlockAddText2    (HANDLE hBlock, LPCWSTR szText, double X, double Y, int Align, double H, double WScale, double RotAngle, double Oblique);
HANDLE LCAPI lcBlockAddText3    (HANDLE hBlock, LPCWSTR szText, double X1, double Y1, double X2, double Y2, int Align, double HW, double Oblique);
HANDLE LCAPI lcBlockAddTextWin  (HANDLE hBlock, LPCWSTR szText, double X, double Y);
HANDLE LCAPI lcBlockAddTextWin2 (HANDLE hBlock, LPCWSTR szText, double X, double Y, int Align, double H, double WScale, double RotAngle, double Oblique);
HANDLE LCAPI lcBlockAddMText    (HANDLE hBlock, LPCWSTR szText, double X, double Y, double WrapWidth, int Align, double RotAngle, double H, double WScale);
HANDLE LCAPI lcBlockAddArcText  (HANDLE hBlock, LPCWSTR szText, double X, double Y, double Radius, double StartAngle, BOOL bClockwise, double H, double WScale, int Align);
HANDLE LCAPI lcBlockAddBlockRef (HANDLE hBlock, HANDLE hRefBlock, double X, double Y, double Scal, double Angle);
HANDLE LCAPI lcBlockAddBlockRefID  (HANDLE hBlock, int idRefBlock, double X, double Y, double Scal, double Angle);  // undoc
HANDLE LCAPI lcBlockAddBlockRefIDH (HANDLE hBlock, LPCWSTR szIdRefBlock, double X, double Y, double Scal, double Angle);  // undoc
HANDLE LCAPI lcBlockAddAttDef   (HANDLE hBlock, int Mode, LPCWSTR szTag, LPCWSTR szPrompt, LPCWSTR szDefVal, double X, double Y, int Align, double H, double WScale, double RotAngle, double Oblique);
HANDLE LCAPI lcBlockAddXref     (HANDLE hBlock, LPCWSTR szFileName, double X, double Y, double ScalX, double ScalY, double Angle);
 
HANDLE LCAPI lcBlockAddImageRef (HANDLE hBlock, HANDLE hImage, double X, double Y, double Width, double Height, BOOL bBorder);
HANDLE LCAPI lcBlockAddImageRefUns (HANDLE hBlock, HANDLE hImage, double X, double Y, double Scale, int Align, BOOL bBorder);
HANDLE LCAPI lcBlockAddImagePlace (HANDLE hBlock, int Id, double X, double Y, double Width, double Height, BOOL bBorder);
HANDLE LCAPI lcBlockAddEcw      (HANDLE hBlock, LPCWSTR szFileName);
HANDLE LCAPI lcBlockAddBarcode  (HANDLE hBlock, int BarType, double Xc, double Yc, double Width, double Height, LPCWSTR szText);
HANDLE LCAPI lcBlockAddHatch    (HANDLE hBlock, LPCWSTR szFileName, LPCWSTR szPatName, double Scal, double Angle);
HANDLE LCAPI lcBlockAddViewport (HANDLE hBlock, double Lef, double Bot, double Width, double Height, double DrwPntX, double DrwPntY, double DrwScale, double DrwAngle);
HANDLE LCAPI lcBlockAddFace     (HANDLE hBlock, int Flags, double x0, double y0, double z0, double x1, double y1, double z1, double x2, double y2, double z2);
HANDLE LCAPI lcBlockAddFace4    (HANDLE hBlock, int Flags, double x0, double y0, double z0, double x1, double y1, double z1, double x2, double y2, double z2, double x3, double y3, double z3);
HANDLE LCAPI lcBlockAddLeader   (HANDLE hBlock, LPCWSTR szText, double Xt, double Yt, double LandDist, double Xa, double Ya, int Attach, int Align);
HANDLE LCAPI lcBlockAddDimLin   (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Xt, double Yt, double Angle, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimHor   (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Yt, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimVer   (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Xt, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimAli   (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Xt, double Yt, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimAli2  (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Dt, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimOrd   (HANDLE hBlock, double Xd, double Yd, double Xt, double Yt, BOOL bX, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimRad   (HANDLE hBlock, double Xc, double Yc, double Xr, double Yr, double Xt, double Yt, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimRad2  (HANDLE hBlock, double Xc, double Yc, double R, double Angle, double TextOff, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimDia   (HANDLE hBlock, double Xc, double Yc, double Xr, double Yr, double Xt, double Yt, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimDia2  (HANDLE hBlock, double Xc, double Yc, double R, double Angle, double TextOff, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimAng   (HANDLE hBlock, double Xc, double Yc, double X1, double Y1, double X2, double Y2, double Xa, double Ya, double TextPos, LPCWSTR szText);
HANDLE LCAPI lcBlockAddDimAng2  (HANDLE hBlock, double X1, double Y1, double X2, double Y2, double X3, double Y3, double X4, double Y4, double Xa, double Ya, double TextPos, LPCWSTR szText);
HANDLE LCAPI lcBlockAddRPlan    (HANDLE hBlock);
HANDLE LCAPI lcBlockAddArrow    (HANDLE hBlock, double X1, double Y1, double X2, double Y2);
HANDLE LCAPI lcBlockAddSpiral   (HANDLE hBlock, double Xc, double Yc, double R, double Turns, BOOL bDirCW, BOOL bClosed);
HANDLE LCAPI lcBlockAddCamview  (HANDLE hBlock, double Lef, double Bot, double Width, double Height);
 
HANDLE LCAPI lcBlockAddClone    (HANDLE hBlock, HANDLE hEnt);
 
BOOL   LCAPI lcBlockBeginShape  (HANDLE hBlock);
 
HANDLE LCAPI lcBlockAddShape    (HANDLE hBlock);
 
HANDLE LCAPI lcBlockAddShapeSel (HANDLE hBlock, BOOL bErase);
 
HANDLE LCAPI lcBlockRepEllipse  (HANDLE hBlock, HANDLE hEll, int* pRetType);
HANDLE LCAPI lcBlockJoinAll     (HANDLE hBlock, double Delta);
// Retrieve graphic objects from a block
HANDLE LCAPI lcBlockGetFirstEnt (HANDLE hBlock);
HANDLE LCAPI lcBlockGetNextEnt  (HANDLE hBlock, HANDLE hEnt);
HANDLE LCAPI lcBlockGetLastEnt  (HANDLE hBlock);
HANDLE LCAPI lcBlockGetPrevEnt  (HANDLE hBlock, HANDLE hEnt);
HANDLE LCAPI lcBlockGetEntByID  (HANDLE hBlock, int Id);
HANDLE LCAPI lcBlockGetEntByIDH (HANDLE hBlock, LPCWSTR szId);
HANDLE LCAPI lcBlockGetEntByKey (HANDLE hBlock, int Key);
HANDLE LCAPI lcBlockGetBlkRefByTag (HANDLE hBlock, LPCWSTR szTag, LPCWSTR szValue, BOOL bSelect);
// Selection
BOOL   LCAPI lcBlockUnselect    (HANDLE hBlock);
BOOL   LCAPI lcBlockSelectEnt   (HANDLE hBlock, HANDLE hEntity, BOOL bSelect);
BOOL   LCAPI lcBlockSelErase    (HANDLE hBlock);
BOOL   LCAPI lcBlockSelMove     (HANDLE hBlock, double dX, double dY, BOOL bCopy, BOOL bNewSelect);
BOOL   LCAPI lcBlockSelScale    (HANDLE hBlock, double X0, double Y0, double Scal, BOOL bCopy, BOOL bNewSelect);
BOOL   LCAPI lcBlockSelRotate   (HANDLE hBlock, double X0, double Y0, double Angle, BOOL bCopy, BOOL bNewSelect);