IWS_1st_No2DInsp/IWS/API/Litecad.pas

Function lcBlockAddPoint (hBlock: IntPtr; X: Double; Y: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddPoint2 (hBlock: IntPtr; X: Double; Y: Double; PtMode: Integer; PtSize: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddPoint3d (hBlock: IntPtr; X: Double; Y: Double; Z: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddPtArray (hBlock: IntPtr; szFileName: PWideChar; hWnd: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddXline (hBlock: IntPtr; X: Double; Y: Double; Angle: Double; bRay: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddXline2P (hBlock: IntPtr; X: Double; Y: Double; X2: Double; Y2: Double; bRay: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddLine (hBlock: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddLineDir (hBlock: IntPtr; X: Double; Y: Double; Angle: Double; Dist: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddLineTan (hBlock: IntPtr; hEnt1: IntPtr; hEnt2: IntPtr; Mode: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddPolyline (hBlock: IntPtr; FitType: Integer; bClosed: Integer; bFilled: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddRPolygon (hBlock: IntPtr; nVers: Integer; Xc: Double; Yc: Double; R: Double; Ang0: Double; bInscribed: Integer; bFilled: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddSpline (hBlock: IntPtr; bClosed: Integer; bFilled: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddMline (hBlock: IntPtr; FitType: Integer; bClosed: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddRect (hBlock: IntPtr; Xc: Double; Yc: Double; Width: Double; Height: Double; Angle: Double; bFilled: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddRect2 (hBlock: IntPtr; Left: Double; Bottom: Double; Width: Double; Height: Double; Rad: Double; bFilled: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddCircle (hBlock: IntPtr; X: Double; Y: Double; Radius: Double; bFilled: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddArc (hBlock: IntPtr; X: Double; Y: Double; Radius: Double; StartAngle: Double; ArcAngle: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddArc3P (hBlock: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; X3: Double; Y3: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddFillet (hBlock: IntPtr; hEnt1: IntPtr; hEnt2: IntPtr; Radius: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddEllipse (hBlock: IntPtr; X: Double; Y: Double; R1: Double; R2: Double; RotAngle: Double; StartAngle: Double; ArcAngle: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddText (hBlock: IntPtr; szText: PWideChar; X: Double; Y: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddText2 (hBlock: IntPtr; szText: PWideChar; X: Double; Y: Double; Align: Integer; H: Double; WScale: Double; RotAngle: Double; Oblique: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddText3 (hBlock: IntPtr; szText: PWideChar; X1: Double; Y1: Double; X2: Double; Y2: Double; Align: Integer; HW: Double; Oblique: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddTextWin (hBlock: IntPtr; szText: PWideChar; X: Double; Y: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddTextWin2 (hBlock: IntPtr; szText: PWideChar; X: Double; Y: Double; Align: Integer; H: Double; WScale: Double; RotAngle: Double; Oblique: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddMText (hBlock: IntPtr; szText: PWideChar; X: Double; Y: Double; WrapWidth: Double; Align: Integer; RotAngle: Double; H: Double; WScale: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddArcText (hBlock: IntPtr; szText: PWideChar; X: Double; Y: Double; Radius: Double; StartAngle: Double; bClockwise: Integer; H: Double; WScale: Double; Align: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddBlockRef (hBlock: IntPtr; hRefBlock: IntPtr; X: Double; Y: Double; Scal: Double; Angle: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddBlockRefID (hBlock: IntPtr; idRefBlock: Integer; X: Double; Y: Double; Scal: Double; Angle: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddBlockRefIDH (hBlock: IntPtr; szIdRefBlock: PWideChar; X: Double; Y: Double; Scal: Double; Angle: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddAttDef (hBlock: IntPtr; Mode: Integer; szTag: PWideChar; szPrompt: PWideChar; szDefVal: PWideChar; X: Double; Y: Double; Align: Integer; H: Double; WScale: Double; RotAngle: Double; Oblique: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddXref (hBlock: IntPtr; szFileName: PWideChar; X: Double; Y: Double; ScalX: Double; ScalY: Double; Angle: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddImageRef (hBlock: IntPtr; hImage: IntPtr; X: Double; Y: Double; Width: Double; Height: Double; bBorder: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddImageRefUns (hBlock: IntPtr; hImage: IntPtr; X: Double; Y: Double; Scale: Double; Align: Integer; bBorder: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddImagePlace (hBlock: IntPtr; Id: Integer; X: Double; Y: Double; Width: Double; Height: Double; bBorder: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddEcw (hBlock: IntPtr; szFileName: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddBarcode (hBlock: IntPtr; BarType: Integer; Xc: Double; Yc: Double; Width: Double; Height: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddHatch (hBlock: IntPtr; szFileName: PWideChar; szPatName: PWideChar; Scal: Double; Angle: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddViewport (hBlock: IntPtr; Lef: Double; Bot: Double; Width: Double; Height: Double; DrwPntX: Double; DrwPntY: Double; DrwScale: Double; DrwAngle: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddFace (hBlock: IntPtr; Flags: Integer; x0: Double; y0: Double; z0: Double; x1: Double; y1: Double; z1: Double; x2: Double; y2: Double; z2: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddFace4 (hBlock: IntPtr; Flags: Integer; x0: Double; y0: Double; z0: Double; x1: Double; y1: Double; z1: Double; x2: Double; y2: Double; z2: Double; x3: Double; y3: Double; z3: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddLeader (hBlock: IntPtr; szText: PWideChar; Xt: Double; Yt: Double; LandDist: Double; Xa: Double; Ya: Double; Attach: Integer; Align: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimLin (hBlock: IntPtr; X0: Double; Y0: Double; X1: Double; Y1: Double; Xt: Double; Yt: Double; Angle: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimHor (hBlock: IntPtr; X0: Double; Y0: Double; X1: Double; Y1: Double; Yt: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimVer (hBlock: IntPtr; X0: Double; Y0: Double; X1: Double; Y1: Double; Xt: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimAli (hBlock: IntPtr; X0: Double; Y0: Double; X1: Double; Y1: Double; Xt: Double; Yt: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimAli2 (hBlock: IntPtr; X0: Double; Y0: Double; X1: Double; Y1: Double; Dt: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimOrd (hBlock: IntPtr; Xd: Double; Yd: Double; Xt: Double; Yt: Double; bX: Integer; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimRad (hBlock: IntPtr; Xc: Double; Yc: Double; Xr: Double; Yr: Double; Xt: Double; Yt: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimRad2 (hBlock: IntPtr; Xc: Double; Yc: Double; R: Double; Angle: Double; TextOff: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimDia (hBlock: IntPtr; Xc: Double; Yc: Double; Xr: Double; Yr: Double; Xt: Double; Yt: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimDia2 (hBlock: IntPtr; Xc: Double; Yc: Double; R: Double; Angle: Double; TextOff: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimAng (hBlock: IntPtr; Xc: Double; Yc: Double; X1: Double; Y1: Double; X2: Double; Y2: Double; Xa: Double; Ya: Double; TextPos: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddDimAng2 (hBlock: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; X3: Double; Y3: Double; X4: Double; Y4: Double; Xa: Double; Ya: Double; TextPos: Double; szText: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddRPlan (hBlock: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddArrow (hBlock: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddSpiral (hBlock: IntPtr; Xc: Double; Yc: Double; R: Double; Turns: Double; bDirCW: Integer; bClosed: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddCamview (hBlock: IntPtr; Lef: Double; Bot: Double; Width: Double; Height: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddClone (hBlock: IntPtr; hEnt: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockBeginShape (hBlock: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockAddShape (hBlock: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockAddShapeSel (hBlock: IntPtr; bErase: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockRepEllipse (hBlock: IntPtr; hEll: IntPtr; pRetType: Pinteger): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockJoinAll (hBlock: IntPtr; Delta: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetFirstEnt (hBlock: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetNextEnt (hBlock: IntPtr; hEnt: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetLastEnt (hBlock: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetPrevEnt (hBlock: IntPtr; hEnt: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetEntByID (hBlock: IntPtr; Id: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetEntByIDH (hBlock: IntPtr; szId: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetEntByKey (hBlock: IntPtr; Key: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetBlkRefByTag (hBlock: IntPtr; szTag: PWideChar; szValue: PWideChar; bSelect: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockUnselect (hBlock: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSelectEnt (hBlock: IntPtr; hEntity: IntPtr; bSelect: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSelErase (hBlock: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSelMove (hBlock: IntPtr; dX: Double; dY: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSelScale (hBlock: IntPtr; X0: Double; Y0: Double; Scal: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSelRotate (hBlock: IntPtr; X0: Double; Y0: Double; Angle: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'Litecad64.dll';
